session-10/ingress-with-tls/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: part-order-ingress-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.idcube.local
      secretName: idcube-tls
  rules:
    - host: api.idcube.local
      http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: part-inventory-service
                port:
                  number: 80
          - path: /parts
            pathType: Prefix
            backend:
              service:
                name: part-inventory-service
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: part-order-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: part-order-service
                port:
                  number: 80
